--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Oxygen', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -50,7 +51,7 @@ section {
     margin-top: 20px;
     padding: 10px 30px;
     font-size: 18px;
-    text-transform: uppercase;
+    text-transform: lowercase;
     text-decoration: none;
     letter-spacing: 2px;
     font-weight: 700;
@@ -67,6 +68,7 @@ header {
     justify-content: space-between;
     align-items: center;
     transition: 0.5s;
+    text-transform: lowercase;
 }
 
 header.sticky {
@@ -241,6 +243,7 @@ img.products {
 
 .formBox form input::placeholder,
 .formBox form textarea::placeholder {
+    text-transform: lowercase;
     color:#fff;
 }
 
@@ -248,7 +251,7 @@ img.products {
     max-width: 100px;
     background: #ea9;
     cursor: pointer;
-    text-transform: uppercase;
+    text-transform: lowercase;
     letter-spacing: 2px;
 }
 
@@ -284,7 +287,9 @@ img.products {
 }
 
 .contactInfoBox .box .text h3 {
+    text-transform: lowercase;
     font-weight: 600;
     color: #ea9;
     margin-bottom: 0;
 }
+
